{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 350,
  "lineage": "e2db50f1-1da9-6784-b0de-8d324f86281a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "publicInstanceK8s-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08962a4068733a2b6",
            "arn": "arn:aws:ec2:us-east-2:256099752605:instance/i-075c24c39be05892c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-075c24c39be05892c",
            "instance_state": "running",
            "instance_type": "t3a.small",
            "ipv6_address_count": 0,
            "key_name": "challenge_tui",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-034b37e3ac0113783",
            "private_dns": "ip-172-16-1-144.us-east-2.compute.internal",
            "private_ip": "172.16.1.144",
            "public_dns": "ec2-3-133-144-52.us-east-2.compute.amazonaws.com",
            "public_ip": "3.133.144.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-080b88db6551b432d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d5f106320be8f442",
            "tags": {
              "Environment": "dev",
              "Name": "awslab-instance-k8s-1",
              "Provisioner": "Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06ed0aa45758c0531"
            ]
          },
          "dependencies": [
            "aws_security_group.awslab-sg-public",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "publicInstanceK8s-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08962a4068733a2b6",
            "arn": "arn:aws:ec2:us-east-2:256099752605:instance/i-02de829351e15ee08",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02de829351e15ee08",
            "instance_state": "running",
            "instance_type": "t3a.small",
            "ipv6_address_count": 0,
            "key_name": "challenge_tui",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bac3c41b1a0c6b32",
            "private_dns": "ip-172-16-1-83.us-east-2.compute.internal",
            "private_ip": "172.16.1.83",
            "public_dns": "ec2-3-140-198-77.us-east-2.compute.amazonaws.com",
            "public_ip": "3.140.198.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0121eed795e69c277",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d5f106320be8f442",
            "tags": {
              "Environment": "dev",
              "Name": "awslab-instance-k8s-2",
              "Provisioner": "Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06ed0aa45758c0531"
            ]
          },
          "dependencies": [
            "aws_security_group.awslab-sg-public",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "publicInstanceK8s-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08962a4068733a2b6",
            "arn": "arn:aws:ec2:us-east-2:256099752605:instance/i-0fe851342ba639413",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fe851342ba639413",
            "instance_state": "running",
            "instance_type": "t3a.small",
            "ipv6_address_count": 0,
            "key_name": "challenge_tui",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0274a6a88cba1bb74",
            "private_dns": "ip-172-16-1-188.us-east-2.compute.internal",
            "private_ip": "172.16.1.188",
            "public_dns": "ec2-3-142-36-147.us-east-2.compute.amazonaws.com",
            "public_ip": "3.142.36.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0343b746a98d20901",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d5f106320be8f442",
            "tags": {
              "Environment": "dev",
              "Name": "awslab-instance-k8s-3",
              "Provisioner": "Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06ed0aa45758c0531"
            ]
          },
          "dependencies": [
            "aws_security_group.awslab-sg-public",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "publicInstanceRancher",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08962a4068733a2b6",
            "arn": "arn:aws:ec2:us-east-2:256099752605:instance/i-04f14904a288eb24d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04f14904a288eb24d",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "challenge_tui",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07c56f9e4d5ea9e79",
            "private_dns": "ip-172-16-1-242.us-east-2.compute.internal",
            "private_ip": "172.16.1.242",
            "public_dns": "ec2-18-218-116-57.us-east-2.compute.amazonaws.com",
            "public_ip": "18.218.116.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f7ea731076a1abe5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d5f106320be8f442",
            "tags": {
              "Environment": "dev",
              "Name": "awslab-instance-rancher",
              "Provisioner": "Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06ed0aa45758c0531"
            ]
          },
          "dependencies": [
            "aws_security_group.awslab-sg-public",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "awslab_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:256099752605:internet-gateway/igw-0c6072f4e7ca7c532",
            "id": "igw-0c6072f4e7ca7c532",
            "owner_id": "256099752605",
            "tags": {
              "Name": "awslab-internet-gateway"
            },
            "vpc_id": "vpc-0bdaacfc494bd97ab"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_NACL",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:256099752605:network-acl/acl-00fbff27903c638be",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-00fbff27903c638be",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": -1,
                "icmp_type": -1,
                "ipv6_cidr_block": "",
                "protocol": "icmp",
                "rule_no": 500,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 32768,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 400,
                "to_port": 61000
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 80
              }
            ],
            "owner_id": "256099752605",
            "subnet_ids": [
              "subnet-0d5f106320be8f442"
            ],
            "tags": {
              "Name": "public NACL"
            },
            "vpc_id": "vpc-0bdaacfc494bd97ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c6072f4e7ca7c532",
            "id": "r-rtb-0c77f77cb0a2b5fab1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c77f77cb0a2b5fab",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.awslab_IGW",
            "aws_route_table.public_RT",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:256099752605:route-table/rtb-0c77f77cb0a2b5fab",
            "id": "rtb-0c77f77cb0a2b5fab",
            "owner_id": "256099752605",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Public Route table"
            },
            "vpc_id": "vpc-0bdaacfc494bd97ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b6de514ca27d875",
            "route_table_id": "rtb-0c77f77cb0a2b5fab",
            "subnet_id": "subnet-0d5f106320be8f442"
          },
          "dependencies": [
            "aws_route_table.public_RT",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "awslab-sg-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:256099752605:security-group/sg-06ed0aa45758c0531",
            "description": "Allow all outbound traffic and inbound 22/80/443/ICMP/Linux Updates",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ed0aa45758c0531",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 61000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "awslab-sg-public",
            "name_prefix": "",
            "owner_id": "256099752605",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "awslab-sg-public",
              "Provisioner": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdaacfc494bd97ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:256099752605:subnet/subnet-0d5f106320be8f442",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-0d5f106320be8f442",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "256099752605",
            "tags": {
              "Name": "awslab-subnet-public"
            },
            "tags_all": {
              "Name": "awslab-subnet-public"
            },
            "vpc_id": "vpc-0bdaacfc494bd97ab"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:256099752605:vpc/vpc-0bdaacfc494bd97ab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0a02b8c60cafa3649",
            "default_route_table_id": "rtb-0137b192d27d4d6dc",
            "default_security_group_id": "sg-06b68dfe4a7f1a1ee",
            "dhcp_options_id": "dopt-99c8acf2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bdaacfc494bd97ab",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0137b192d27d4d6dc",
            "owner_id": "256099752605",
            "tags": {
              "Name": "awslab-vpc"
            },
            "tags_all": {
              "Name": "awslab-vpc"
            }
          }
        }
      ]
    }
  ]
}